small spacing fixes

--- a/src/styles/modules/ajax-cart.scss
+++ b/src/styles/modules/ajax-cart.scss
@@ -183,7 +183,7 @@ body.ajax-cart-open {
 }
 
 .ajax-cart__item-header {
-  margin-bottom: 6px;
+  margin-bottom: 3px;
   line-height: 1.4;
 }
 
